<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>se.cambio.cds</groupId>
        <artifactId>mig-project</artifactId>
        <version>1.0.51</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>se.cambio</groupId>
    <artifactId>gdl-tools</artifactId>
    <packaging>pom</packaging>
    <version>0-SNAPSHOT</version>
    <name>GDL Tools</name>
    <properties>
        <openehr-java-libs-version>1.0.47</openehr-java-libs-version>
        <adl2-core-version>1.0.0</adl2-core-version>
        <sonar.exclusions>com/mxgraph/**/*</sonar.exclusions>
    </properties>

    <scm>
        <developerConnection>${scm.url}</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>openehr-utils</module>
        <module>cds</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>6.9.10</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
